--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --fix .",
@@ -17,17 +17,23 @@
     "cypress:headless": "cypress run"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "next": "15.2.2",
     "openai": "^4.87.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "tailwind-merge": "^3.0.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@testing-library/cypress": "^10.0.3",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -37,6 +43,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/testing-library__jest-dom": "^5.14.9",
+    "autoprefixer": "^10.4.14",
     "cypress": "^14.2.0",
     "eslint": "^9.22.0",
     "eslint-config-next": "15.2.2",
@@ -49,8 +56,10 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lucide-react": "^0.481.0",
+    "postcss": "^8.4.31",
+    "postcss-import": "^16.1.0",
     "prettier": "^3.5.3",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.3.0",
     "ts-jest": "^29.2.6",
     "typescript": "^5.8.2"
   }
