Feat(auth): implement authentication system with Supabase

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -H 0.0.0.0",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start -H 0.0.0.0",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx --fix .",
+    "start": "next start",
+    "lint": "next lint",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "type-check": "tsc --noEmit",
     "test": "jest",
@@ -14,15 +14,26 @@
     "test:coverage": "jest --coverage",
     "cypress": "cypress open",
     "cypress:run": "cypress run",
-    "cypress:headless": "cypress run"
+    "cypress:headless": "cypress run",
+    "migrate": "node scripts/migrate.js",
+    "supabase:start": "supabase start",
+    "supabase:stop": "supabase stop",
+    "supabase:status": "supabase status",
+    "supabase:db:reset": "supabase db reset",
+    "supabase:db:push": "supabase db push",
+    "supabase:types": "supabase gen types typescript --local > src/types/supabase.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.1",
+    "@tanstack/react-query": "^5.68.0",
     "@zoom/videosdk": "^1.10.0",
     "axios": "^1.6.7",
     "bigbluebutton-js": "^0.2.0",
@@ -32,7 +43,9 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.5.0",
     "next": "15.2.2",
+    "next-safe-action": "^7.10.4",
     "openai": "^4.87.3",
+    "pg": "^8.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -70,8 +83,10 @@
     "msw": "^2.2.3",
     "postcss": "^8.4.31",
     "prettier": "^3.5.3",
+    "supabase": "^1.115.4",
     "tailwindcss": "^3.3.0",
     "ts-jest": "^29.2.6",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   }
 }
