--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,28 @@
 # Supabase Configuration
+NEXT_PUBLIC_SUPABASE_URL=your-project-url
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+
+# OpenAI Configuration
+OPENAI_API_KEY=your-openai-api-key
+
+# ElevenLabs Configuration (Optional)
+ELEVENLABS_API_KEY=your-elevenlabs-api-key
+
+# Gupshup Configuration (Optional)
+GUPSHUP_API_KEY=your-gupshup-api-key
+GUPSHUP_APP_NAME=your-gupshup-app-name
+
+# Stripe Configuration (Optional)
+STRIPE_SECRET_KEY=your-stripe-secret-key
+STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key
+
+# Application Configuration
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Next Auth
+# Supabase Configuration
 NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
 
