--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.3",
+    "@types/jsonwebtoken": "^9.0.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "next-safe-action": "^6.1.0",
@@ -46,6 +48,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
