--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,22 @@
   "env": {
     "NEXT_PUBLIC_SUPABASE_URL": "@next_public_supabase_url",
     "NEXT_PUBLIC_SUPABASE_ANON_KEY": "@next_public_supabase_anon_key"
+  },
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/next"
+    }
+  ],
+  "checks": {
+    "typecheck": {
+      "command": "pnpm type-check"
+    },
+    "lint": {
+      "command": "pnpm lint"
+    },
+    "test": {
+      "command": "pnpm test:e2e"
+    }
   }
 }
