--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "type-check": "tsc --noEmit",
-    "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui",
-    "test:e2e:debug": "playwright test --debug",
+    "test:e2e": "PORT=3001 playwright test",
+    "test:e2e:ui": "PORT=3001 playwright test --ui",
+    "test:e2e:debug": "PORT=3001 playwright test --debug",
     "test:e2e:report": "playwright show-report",
     "migrate": "node scripts/migrate.js",
     "supabase:start": "supabase start",
