--- a/package.json
+++ b/package.json
@@ -22,52 +22,84 @@
     "supabase:types": "supabase gen types typescript --local > src/types/supabase.ts"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.4",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@supabase/ssr": "^0.1.0",
-    "@supabase/supabase-js": "^2.39.3",
-    "@types/jsonwebtoken": "^9.0.9",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.323.0",
+    "@hookform/resolvers": "3.10.0",
+    "@radix-ui/react-accordion": "1.2.3",
+    "@radix-ui/react-alert-dialog": "1.1.6",
+    "@radix-ui/react-avatar": "1.1.3",
+    "@radix-ui/react-dialog": "1.1.6",
+    "@radix-ui/react-dropdown-menu": "2.1.6",
+    "@radix-ui/react-label": "2.1.2",
+    "@radix-ui/react-popover": "1.1.6",
+    "@radix-ui/react-select": "2.1.6",
+    "@radix-ui/react-separator": "1.1.2",
+    "@radix-ui/react-slot": "1.1.2",
+    "@radix-ui/react-tabs": "1.1.3",
+    "@radix-ui/react-toast": "1.2.6",
+    "@supabase/ssr": "0.1.0",
+    "@supabase/supabase-js": "2.49.1",
+    "@types/jsonwebtoken": "9.0.9",
+    "ajv": "8.17.1",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "d3-array": "3.2.4",
+    "d3-color": "3.1.0",
+    "d3-format": "3.1.0",
+    "d3-interpolate": "3.0.1",
+    "d3-path": "3.1.0",
+    "d3-scale": "4.0.2",
+    "d3-shape": "3.2.0",
+    "d3-time": "3.1.0",
+    "d3-time-format": "4.1.0",
+    "d3-timer": "3.0.1",
+    "decimal.js-light": "2.5.1",
+    "eventemitter3": "4.0.7",
+    "fast-equals": "5.2.2",
+    "jsonwebtoken": "9.0.2",
+    "lodash": "4.17.21",
+    "lucide-react": "0.323.0",
     "next": "14.1.0",
-    "next-safe-action": "^6.1.0",
-    "next-themes": "^0.2.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.50.1",
-    "recharts": "^2.15.1",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "next-safe-action": "6.2.0",
+    "next-themes": "0.2.1",
+    "picomatch": "4.0.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-hook-form": "7.54.2",
+    "react-is": "18.3.1",
+    "react-smooth": "4.0.4",
+    "react-transition-group": "4.4.5",
+    "recharts": "2.15.1",
+    "recharts-scale": "0.4.5",
+    "tailwind-merge": "2.6.0",
+    "tailwindcss-animate": "1.0.7",
+    "tiny-invariant": "1.3.3",
+    "victory-vendor": "36.9.2",
+    "zod": "3.24.2"
   },
   "devDependencies": {
-    "@playwright/test": "^1.51.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "@typescript-eslint/parser": "^6.20.0",
-    "autoprefixer": "^10.0.1",
-    "dotenv": "^16.4.7",
-    "eslint": "^8",
+    "@playwright/test": "1.51.1",
+    "@types/d3-array": "3.2.1",
+    "@types/d3-color": "3.1.3",
+    "@types/d3-ease": "3.0.2",
+    "@types/d3-interpolate": "3.0.4",
+    "@types/d3-path": "3.1.1",
+    "@types/d3-scale": "4.0.9",
+    "@types/d3-shape": "3.1.7",
+    "@types/d3-time": "3.0.4",
+    "@types/d3-timer": "3.0.2",
+    "@types/ms": "2.1.0",
+    "@types/node": "20.17.24",
+    "@types/react": "18.3.18",
+    "@types/react-dom": "18.3.5",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
+    "autoprefixer": "10.4.21",
+    "dotenv": "16.4.7",
+    "eslint": "8.57.1",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "postcss": "8.5.3",
+    "prettier": "3.5.3",
+    "prettier-plugin-tailwindcss": "0.5.14",
+    "tailwindcss": "3.4.17",
+    "typescript": "5.8.2"
   }
 }
