--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -56,8 +56,9 @@ jobs:
         sleep 30
         pnpm test:e2e
         
-    - uses: actions/upload-artifact@v4
+    - name: Upload test results
       if: always()
+      uses: actions/upload-artifact@v4
       with:
         name: playwright-report
         path: playwright-report/
