--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,18 +10,38 @@ jobs:
   unit-tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      
+      - uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
-          cache: 'npm'
+          node-version: 20
+          
+      - name: Install pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 10
+          
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - uses: actions/cache@v4
+        name: Setup pnpm cache
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
+        
       - name: Run unit tests
-        run: npm test
+        run: pnpm test
+        
       - name: Upload test coverage
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: coverage
           path: coverage/
@@ -30,31 +50,49 @@ jobs:
     runs-on: ubuntu-latest
     needs: unit-tests
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      
+      - uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
-          cache: 'npm'
-      - name: Install dependencies
-        run: npm ci
-      - name: Install Cypress
-        run: npx cypress install
-      - name: Build Next.js app
-        run: npm run build
-      - name: Start Next.js app and run Cypress tests
+          node-version: 20
+          
+      - name: Install pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 10
+          
+      - name: Get pnpm store directory
+        shell: bash
         run: |
-          npm run start & npx wait-on http://localhost:3000
-          npx cypress run
-      - name: Upload Cypress screenshots
-        uses: actions/upload-artifact@v3
-        if: failure()
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - uses: actions/cache@v4
+        name: Setup pnpm cache
         with:
-          name: cypress-screenshots
-          path: cypress/screenshots/
-      - name: Upload Cypress videos
-        uses: actions/upload-artifact@v3
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+        
+      - name: Install Playwright
+        run: pnpm exec playwright install --with-deps
+        
+      - name: Build Next.js app
+        run: pnpm build
+        
+      - name: Start server and run tests
+        run: |
+          pnpm dev & 
+          sleep 30
+          pnpm test:e2e
+        
+      - name: Upload test results
         if: always()
+        uses: actions/upload-artifact@v4
         with:
-          name: cypress-videos
-          path: cypress/videos/
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
