Feat(editor): add AI assistant to rich text editor

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "@types/jsonwebtoken": "9.0.9",
+    "ai": "^4.1.61",
     "ajv": "8.17.1",
     "class-variance-authority": "0.7.1",
     "d3-array": "3.2.4",
@@ -71,6 +72,7 @@
     "next": "14.1.0",
     "next-safe-action": "6.2.0",
     "next-themes": "0.2.1",
+    "openai": "^4.87.3",
     "picomatch": "4.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
