--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "prettier-plugin-tailwindcss": "0.5.14",
     "tailwind-merge": "2.6.0",
     "tailwindcss": "3.4.17",
+    "tsx": "^4.19.3",
     "typescript": "5.8.2"
   }
 }
