--- a/package.json
+++ b/package.json
@@ -22,22 +22,23 @@
     "supabase:types": "supabase gen types typescript --local > src/types/supabase.ts"
   },
   "dependencies": {
-    "@hookform/resolvers": "3.10.0",
-    "@radix-ui/react-accordion": "1.2.3",
-    "@radix-ui/react-alert-dialog": "1.1.6",
-    "@radix-ui/react-avatar": "1.1.3",
-    "@radix-ui/react-dialog": "1.1.6",
-    "@radix-ui/react-dropdown-menu": "2.1.6",
-    "@radix-ui/react-label": "2.1.2",
-    "@radix-ui/react-popover": "1.1.6",
-    "@radix-ui/react-select": "2.1.6",
-    "@radix-ui/react-separator": "1.1.2",
-    "@radix-ui/react-slot": "1.1.2",
-    "@radix-ui/react-tabs": "1.1.3",
-    "@radix-ui/react-toast": "1.2.6",
-    "@radix-ui/react-toggle": "^1.1.2",
-    "@supabase/ssr": "0.1.0",
-    "@supabase/supabase-js": "2.49.1",
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.39.0",
     "@tiptap/extension-code-block-lowlight": "^2.11.5",
     "@tiptap/extension-highlight": "^2.11.5",
     "@tiptap/extension-image": "^2.11.5",
@@ -48,44 +49,46 @@
     "@tiptap/pm": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
-    "@types/jsonwebtoken": "9.0.9",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@vercel/kv": "^3.0.0",
     "ai": "^4.1.61",
-    "ajv": "8.17.1",
-    "class-variance-authority": "0.7.1",
-    "d3-array": "3.2.4",
-    "d3-color": "3.1.0",
-    "d3-format": "3.1.0",
-    "d3-interpolate": "3.0.1",
-    "d3-path": "3.1.0",
-    "d3-scale": "4.0.2",
-    "d3-shape": "3.2.0",
-    "d3-time": "3.1.0",
-    "d3-time-format": "4.1.0",
-    "d3-timer": "3.0.1",
-    "decimal.js-light": "2.5.1",
-    "eventemitter3": "4.0.7",
-    "fast-equals": "5.2.2",
-    "jsonwebtoken": "9.0.2",
-    "lodash": "4.17.21",
+    "ajv": "^8.17.1",
+    "class-variance-authority": "^0.7.0",
+    "d3-array": "^3.2.4",
+    "d3-color": "^3.1.0",
+    "d3-format": "^3.1.0",
+    "d3-interpolate": "^3.0.1",
+    "d3-path": "^3.1.0",
+    "d3-scale": "^4.0.2",
+    "d3-shape": "^3.2.0",
+    "d3-time": "^3.1.0",
+    "d3-time-format": "^4.1.0",
+    "d3-timer": "^3.0.1",
+    "decimal.js-light": "^2.5.1",
+    "eventemitter3": "^5.0.1",
+    "fast-equals": "^5.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "lowlight": "^3.3.0",
-    "lucide-react": "0.323.0",
-    "next": "14.1.0",
-    "next-safe-action": "6.2.0",
-    "next-themes": "0.2.1",
+    "lucide-react": "^0.323.0",
+    "next": "^14.1.0",
+    "next-safe-action": "^6.2.0",
+    "next-themes": "^0.2.1",
     "openai": "^4.87.3",
-    "picomatch": "4.0.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-hook-form": "7.54.2",
-    "react-is": "18.3.1",
-    "react-smooth": "4.0.4",
-    "react-transition-group": "4.4.5",
-    "recharts": "2.15.1",
-    "recharts-scale": "0.4.5",
-    "tailwindcss-animate": "1.0.7",
-    "tiny-invariant": "1.3.3",
-    "victory-vendor": "36.9.2",
-    "zod": "3.24.2"
+    "picomatch": "^4.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
+    "react-is": "^18.3.1",
+    "react-smooth": "^4.0.4",
+    "react-transition-group": "^4.4.5",
+    "recharts": "^2.15.1",
+    "recharts-scale": "^0.4.5",
+    "tailwindcss-animate": "^1.0.7",
+    "tiny-invariant": "^1.3.3",
+    "vercel-ai": "^0.0.0",
+    "victory-vendor": "^36.9.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@playwright/test": "1.51.1",
